syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.msa_ecommerce.ApiGatewayService.proto";
option java_outer_classname = "ApiGatewayServiceProto";


message CustomerInformationRequest {
    string customer_id = 1;
}
message CustomerAddress {
    string address_line_1 = 1;
    string address_line_2 = 2;
    string city = 3;
    string state = 4;
    string country = 5;
    string postal_code = 6;
}
message CustomerCard {
    string card_number = 1;
    string card_holder_name = 2;
    string expiry_date = 3;
    CustomerAddress address = 5;
}
message CustomerInformation {
    string customer_id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    bool is_active = 5;
    bool is_admin = 6;
    string profile_picture = 7;
    CustomerAddress address = 8;
    repeated CustomerCard payment_card = 9;
}

message CreateCustomerRequest {
    string name = 1;
    string email = 2;
    string phone_number = 3;
    CustomerAddress address = 4;
}

message CreateCustomerResponse {
    bool is_success = 1;
    string customer_id = 2;    
}

message UpdateCustomerCardRequest {
    string customer_id = 1;
    string card_number = 2;
    string card_holder_name = 3;
    string expiry_date = 4;
    CustomerAddress address = 5;
}

message UpdateCustomerCardResponse {
    bool is_success = 1;
    string message = 2;
}

message DeleteCustomerRequest {
    string customer_id = 1;
}

message DeleteCustomerResponse {
    bool is_success = 1;
    string message = 2;
}


service CustomerService {
    rpc GetCustomerInformation(CustomerInformationRequest) returns (CustomerInformation);
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
    rpc UpdateCustomerCard(UpdateCustomerCardRequest) returns (UpdateCustomerCardResponse);
    rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
}
